--- a/hng.html
+++ b/hng.html
@@ -49,7 +49,7 @@
   </header>
 
   <nav>
-    <a href="home.html">Home</a>
+    <a href="index.html.html">Home</a>
     <a href="products.html">Products</a>
     <a href="about.html">About Us</a>
     <a href="contact.html">Contact Us</a>
